--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,12 @@
   --grey: #2e2f42;
   --white: #ffffff;
   --dairy: #fcfcfc;
+  --animation: 2050ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* main styles */
 body {
+  padding-top: 72px;
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -85,9 +87,16 @@ img {
   gap: 40px;
 }
 
+
+
 /* other header styles */
 
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+
   border-bottom: 1px solid var(--cornflower);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);;
 }
@@ -108,6 +117,12 @@ img {
 .contact {
   font-style: normal;
 }
+
+.contact-link,
+.nav-link {
+  transition: color var(--animation);
+}
+
 .contact-link:hover,
 .contact-link:focus {
   color: var(--ocean);
@@ -118,6 +133,8 @@ img {
 }
 
 .nav-link {
+  position:relative;
+
   display: inline-block ;
   padding: 24px 0;
   font-weight: 500;
@@ -125,6 +142,22 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
+}
+
+.nav-link.current {
+  color: var(--ocean);
+}
+
+.nav-link.current::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--ocean);
 }
 
 .nav-link:hover,
@@ -177,24 +210,82 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-
   min-width: 169px;
   min-height: 56px;
+  
   font: inherit;
   font-weight: 500;
   letter-spacing: 0.04em;
+
   color: var(--white);
   background-color: var(--iris);
   cursor: pointer;
-
   border-radius: 4px;
   border: none;
+
+  transition: background-color var(--animation);
 }
 
 .order-btn:hover,
 .order-btn:focus {
   background-color: var(--ocean);
 }
+
+/* modal window */
+
+.backdrop { 
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 1;
+  transition: opacity var(--animation), visibility var(--animation);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal{
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  min-width: 408px;
+  min-height: 576px;
+  padding: 24px;
+
+  background-color: #FCFCFC;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+ 
+  transition: transform var(--animation);
+
+}
+
+ .modal-btn {
+  display: block;  
+  margin-left: auto;
+  width: 24px;
+  height: 24px;
+
+  background-color: var(--cornflower);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+ }
 
 /* styles for titles */
 .title {
@@ -312,6 +403,8 @@ img {
   color: var(--cloud);
   background-color: var(--iris);
   border-radius: 50%;
+
+  transition: background-color var(--animation);
 }
 
 .icon {
@@ -344,6 +437,8 @@ img {
   border: 1px solid var(--light-slate);
   border-radius: 4px;
   color: var(--light-slate);
+
+  transition: color var(--animation), border-color var(--animation);
 }
 
 .customer{
@@ -395,6 +490,10 @@ img {
   color: var(--white);
 }
 
+.footer .icon-link{
+  transition: background-color var(--animation);
+}  
+
 .footer .icon-link:hover,
 .footer .icon-link:focus {
   background-color: var(--green)
@@ -424,10 +523,12 @@ img {
   border: 1px solid var(--cornflower);
   border-radius: 4px;
   cursor: pointer;
-
   text-align: center;
   padding: 12px 24px;
+
+  transition: color var(--animation), background-color var(--animation), border var(--animation), box-shadow var(--animation);
 }
+
 .button:hover,
 .button:focus {
   color: var(--white);
@@ -438,6 +539,34 @@ img {
 }
 
 /* cards */
+
+.card-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-card {
+  position:absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+
+  transform: translateY(100%);
+  transition: transform var(--animation);
+}
+
+.card-link:hover .overlay-card,
+.card-link:focus .overlay-card {
+  transform: translateY(0) ;
+}
+
+.overlay-text {
+  padding: 40px 32px;
+  color: var(--cloud);
+}
 
 .card-text {
   padding: 32px 16px;
@@ -450,6 +579,8 @@ img {
 
 .card-link {
   display: block;
+
+  transition: box-shadow var(--animation);
 }
 
 .card-link:hover, 
