--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --grey: #2e2f42;
   --white: #ffffff;
   --dairy: #fcfcfc;
-  --animation: 2050ms cubic-bezier(0.4, 0, 0.2, 1);
+  --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* main styles */
@@ -280,11 +280,24 @@ img {
   width: 24px;
   height: 24px;
 
+  color: var(--navy-blue);
   background-color: var(--cornflower);
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+
+  transition: color var(--animation), background-color var(--animation);
+ }
+
+ .modal-icon {
+  fill:currentColor;
+ }
+
+ .modal-btn:hover,
+ .modal-btn:focus {
+  color: var(--white);
+  background-color: var(--ocean);
  }
 
 /* styles for titles */
